HOTFIX: Fix home services image order and remove extra margin

--- a/src/sections/HomeServices/index.css
+++ b/src/sections/HomeServices/index.css
@@ -92,7 +92,6 @@
 .second-image {
   width: calc($seven-columns + $gutter);
 
-  margin-top: $spacing-84;
   margin-right: calc(-1 * $column-spacing);
   margin-left: auto;
 
